# google-docs-mcp

./: .gitignore  README.md  auth_setup.py  docs_edit.py  pyproject.toml  requirements.txt  server.py
